# hydro-stat

./: .dockerignore  .gitignore  Dockerfile  README.md  README_dev.md  README_long.md  README_medium.md  app.py  config.py  data_utils.py  docker-compose.yaml  hydro_data.py  jenkinsfile.disable.groovy  jenkinsfile.groovy  logging_config.ini  params  params.json  pyproject.toml  requirements.txt  stat_analysis.py
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docker-ci.yaml  release.yaml
CODE/: dataloader.py  main.py  profiler.py  reporter.py
CODE/datasets/: comnist.py  hydro_data.py  mnist.py  pacs  pacs.py  svhn.py  usps.py
CODE/interpretability/: interpret.py  monitor_stats.py
CODE/metric_tests/: continuous_stats.py  discrete_stats.py  image_stats.py  kuiper.py  text_stats.py
CODE/utils/: best_length.py  brute_continuous.py  brute_continuous_classifier.py  time.py  (+11 more)
app/: app.py  bivariate_feature_report.py  config.py  continious.py  discrete.py  kuiper.py  stat_analysis.py  statistical_feature_report.py  statistical_report.py  statistical_test.py  test_messages.py  utils.py
datasets/: hydro_data.py
grpc/: drift_pb2.py  drift_pb2_grpc.py
hydro_stat/: __init__.py  app.py  continious.py  discrete.py  interpret.py  kuiper.py  monitor_stats.py  statistical_feature_report.py  statistical_report.py  statistical_test.py  utils.py
interpretability/: interpret.py  monitor_stats.py  profiler.py  reporter.py
metric_tests/: continuous_stats.py  discrete_stats.py  kuiper.py
models/: sentiment_analyzer.provectus
tests/: test_heatmap.py  test_report.py
(+15 files in other folders)
