[tool.poetry]
name = "hydro_stat"
version = "3.0.3"
description = "Service for detecting domain drifts between training and production data using featurewise statistics."
authors = ["hydrosphere.io"]

[tool.poetry.dependencies]
python = "^3.8"
pandas="1.2.5"
Flask="1.1.1"
requests="2.23.0"
flask_cors="3.0.8"
waitress="2.1.1"
boto3="1.12.24"
s3fs="0.4.0"
hydrosdk = "3.0.3"
scikit-learn = "^0.24.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
